--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,14 +9,13 @@
 
     <EditText
         android:id="@+id/editTextMessage"
-        android:layout_width="338dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="51dp"
-        android:layout_marginEnd="51dp"
-        android:layout_marginBottom="19dp"
+        android:layout_width="343dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="27dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="48dp"
         android:ems="10"
-        android:inputType="text"
-        android:text="Escribe aqui tu mensaje"
+        android:hint="Escribe aqui tu mensaje..."
         app:layout_constraintBottom_toTopOf="@+id/buttonSend"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,8 +25,8 @@
         android:id="@+id/buttonSend"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="79dp"
         android:text="Enviar mensaje!"
         android:textColorLink="@color/design_default_color_primary_variant"
         app:layout_constraintBottom_toTopOf="@+id/listViewMessages"
@@ -38,7 +37,7 @@
         android:id="@+id/listViewMessages"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="97dp"
+        android:layout_marginBottom="103dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,11 +47,12 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="112dp"
         android:layout_marginTop="11dp"
-        android:layout_marginBottom="74dp"
+        android:layout_marginBottom="62dp"
         android:text="chat - dudas de los proyectos"
         app:layout_constraintBottom_toTopOf="@+id/editTextMessage"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
