--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -29,8 +29,8 @@
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="66dp"
         android:ems="10"
+        android:hint="Escribe aqui tu mensaje..."
         android:inputType="text"
-        android:text="Escribe aqui tu mensaje"
         app:layout_constraintBottom_toTopOf="@+id/buttonSend2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
